# Snake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Snake.7z  Vulkan.sln  build.bat  buildWindows.bat  defaultSnakeConfig.txt  snake.html
.github/workflows/: cmake.yml
Project1/: Project1.vcxproj  Project1.vcxproj.filters
Project1/Core/: KeyCodes.h  Platform.h  Window.h
Project1/Event/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
Project1/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Snake/: Application.hpp  Logger.cpp  Logger.hpp  Main.cpp  Snake.vcxproj  SnakeApp.cpp  SnakeApp.hpp  main.cpp
Snake/Mountain/: Device.cpp  Device.hpp  Exception.hpp  Instance.cpp  Instance.hpp  Logger.hpp  Result.cpp  Result.hpp  StringUtil.hpp  Window.cpp  Window.hpp
Snake/Shaders/: Shader.frag  Shader.vert
Snake/Shaders/Compiled/: Shader.frag.spv  Shader.vert.spv
bin-int/Debug-Win32/: Lib.idb  Project1.vcxproj.FileListAbsolute.txt  Snake.exe.recipe  vc142.idb  windowswindow.obj.enc
bin-int/Debug-Win32/Lib.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.lastbuildstate
bin-int/Debug-Win32/Snake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-Win32/: Snake.exe.recipe
bin-int/Release-Win32/Lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
bin-int/Release-Win32/Snake.tlog/: CL.command.1.tlog  CL.write.1.tlog  Snake.lastbuildstate  Snake.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
